# spatial-probe

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  NOTICE  PLAN.md  README.md  pyproject.toml
docs/: README.md  aletheon.md  benchmark-anchors.md  design-language.md  expressivity-vs-refav.md  h3-real-data-findings.md  m2-adapter-contract.md  occquery-writeup.md  premise-verification-2026-06-25.md  prism.md  research-integrity.md
docs/research-program/: README.md  asof.md  dynfield.md  frontier-methodology.md  frontier-survey.md  gt-distrust.md  occquery.md  open-problems-research-request.md  study-guide.md  substrate-and-oracle.md  value-of-correction.md  vis-calibration.md
experiments/autolabel_v0/: preregistration.md  run.py
experiments/autolabel_v0/results/: summary.md
experiments/dynfield_v0/: av2_danger_logs.json  danger_density.py  harness.py  harness_v2.py  preregistration.md  r0_action_sensitivity.py  r0_danger.py  r0_danger_preregistration.md  r0_preregistration.md  r0v2_preregistration.md  r0v3_preregistration.md  surrogate.py
experiments/dynfield_v0/results/: r0_danger_summary.md  r0_summary.md  summary.md
experiments/meshprobe/: .gitignore  README.md  build_mesh.py  index.html  serve.py
experiments/occquery_v0/: README.md  build_aletheon_demo.py  build_pool.py  build_prism_demo.py  camera_oracle.py  consistency.py  export_label.py  export_lidar.py  export_web.py  future_reveal_density.py  future_reveal_preregistration.md  gallery.py  h3b_expressivity.py  h3b_expressivity_preregistration.md  held-out-pilot.txt  igev_disparity_pod.py  l1_denotation_occ3d.py  l1_denotation_occ3d_preregistration.md  oracle_box_recall.py  oracle_box_recall_preregistration.md  oracle_depth_recall.py  oracle_depth_recall_preregistration.md  oracle_depth_recall_v2_preregistration.md  oracle_heldout_logs.json  oracle_heldout_preregistration.md  oracle_stereo_recall.py  oracle_stereo_recall_freedriving_preregistration.md  oracle_stereo_recall_kitti_preregistration.md  oracle_stereo_recall_learned_preregistration.md  oracle_stereo_recall_preregistration.md  oracle_traversal.py  oracle_traversal_preregistration.md  oracle_traversal_v0_1_preregistration.md  pod_setup.sh  pool-pilot.json  preregistration.md  projection.py  queries.yaml  reveal_grade.py  reveal_oracle.py  (+12 more)
experiments/occquery_v0/results/: h3b_expressivity_summary.md  l1_denotation_occ3d_summary.md  oracle_box_recall_summary.md  oracle_depth_recall_summary.md  oracle_stereo_recall_freedriving_summary.md  oracle_stereo_recall_kitti_summary.md  oracle_stereo_recall_learned_summary.md  oracle_stereo_recall_summary.md  oracle_traversal_summary.md  search_yield_occ3d_summary.md  semantickitti_xdataset_summary.md  summary.md  synth_denotation_summary.md
mcp_server/: README.md  server.py
src/aletheon/: __init__.py  adapt.py  cli.py  detect.py  failure.py  ir.py  predicates.py  query.py  serialize.py  validate.py
src/aletheon/adapters/: __init__.py  mcap_adapter.py  rerun_adapter.py
src/prism/: __init__.py  adapt.py  cli.py  detect.py  failure.py  ir.py  predicates.py  query.py  serialize.py  validate.py
src/prism/adapters/: __init__.py  mcap_adapter.py  rerun_adapter.py
src/probe/: __init__.py  grid.py  metrics.py  query_dsl.py  query_spec.py  raycast.py  retrieval.py  scene.py
src/probe/adapters/: __init__.py  av2_sensor.py  occ3d.py  semantickitti.py
src/probe/predicates/: __init__.py  clearance.py  freepath.py  objects.py  reachable.py
tests/: test_adapter_contract.py  test_adapter_velocity.py  test_aletheon_adapters.py  test_aletheon_cli.py  test_aletheon_detect.py  test_aletheon_failure.py  test_aletheon_ir.py  test_aletheon_predicates.py  test_aletheon_query.py  test_aletheon_serialize.py  test_aletheon_validate.py  test_autolabel.py  test_dynfield_witness.py  test_expressivity.py  test_l1_denotation_metrics.py  test_metrics.py  test_predicates.py  test_prism_adapters.py  test_prism_cli.py  test_prism_detect.py  test_prism_failure.py  test_prism_ir.py  test_prism_predicates.py  test_prism_query.py  test_prism_serialize.py  test_prism_validate.py  test_query_dsl.py  test_query_spec.py  test_raycast.py  test_reachable.py  test_retrieval.py  test_scene.py  test_search_yield.py  test_semantickitti_adapter.py  test_stereo_recall_artifact.py  test_synth_denotation.py
tools/claude/: remote-control.sh
tools/claude-harness/: README.md
tools/claude-harness/agents/: rigorist.md
tools/claude-harness/hooks/: rigor-claim-gate.sh  settings.PreToolUse.snippet.json
tools/claude-harness/workflows/: rigor.js
web/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/(shell)/: layout.tsx
web/app/aletheon/: page.tsx
web/app/evidence/: page.tsx
web/app/freespace/: page.tsx
web/app/occquery/: page.tsx
web/app/overview/: page.tsx
web/app/prism/: page.tsx
web/components/: app-sidebar.tsx  locale-toggle.tsx  mode-toggle.tsx  occquery-viewer.tsx
web/components/aletheon/: query-panel.tsx
web/components/freespace/: data.ts  freespace-scene.tsx  geometry-controls.tsx  mdc-client.ts  projective.ts  viewer.tsx  (+1 more)
web/docs-scratch/: scene-representation-report.html
web/engines/mdc-wasm/: Cargo.toml
web/engines/mdc-wasm/src/: dc.rs  edt.rs  lib.rs  qef.rs
web/i18n/: actions.ts  config.ts  request.ts
web/lib/: findings.ts  pipeline.ts
web/messages/: en.json  ko.json
web/scripts/: build-wasm.sh  gsplat-plan.md  gsplat_prep.py  prep_lidar_recon.py  prep_occ.py
(+73 files in other folders)
