[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-probe"
version = "0.0.0"
description = "An instrument for probing what a spatial representation stores and whether it is queryable/trustworthy enough to act on."
authors = [{ name = "Doeon Kwon" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3.11"]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",  # ndimage: C-space reachable_free_field (predicates/reachable.py)
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# added at the milestone that needs them — kept out of the base install
data = ["nuscenes-devkit>=1.1.11"]   # M2: Occ3D-nuScenes adapter
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
