[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-probe"
version = "0.0.0"
description = "An instrument for probing what a spatial representation stores and whether it is queryable/trustworthy enough to act on."
authors = [{ name = "Doeon Kwon" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3.11"]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",  # ndimage: C-space reachable_free_field (predicates/reachable.py)
    "pyyaml>=6.0",
    "pyarrow>=14",  # prism: lossless Scene IR (de)serialization + av2 calibration feathers
]

[project.scripts]
prism = "prism.cli:main"

[project.optional-dependencies]
# added at the milestone that needs them — kept out of the base install
data = ["nuscenes-devkit>=1.1.11"]   # M2: Occ3D-nuScenes adapter
dev = ["pytest>=8.0"]
mcp = ["mcp>=1.2"]                    # mcp_server/: expose the probe as LLM-callable tools
rerun = ["rerun-sdk>=0.20"]          # S4: optional Rerun visualization adapter (lazy import)
mcap = ["mcap>=1.0"]                 # S4: optional MCAP log container adapter (lazy import)
detect = ["onnxruntime>=1.16", "pillow>=10.0"]  # detect.py: optional 2D-detector (YOLOv8n ONNX), lazy import

[tool.setuptools.packages.find]
where = ["src"]
include = ["probe*", "prism*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
