[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-probe"
version = "0.0.0"
description = "PRISM: find the scenes where a spatial model is wrong, with a label-free correctness check. Sensor-agnostic Scene IR + safe query language + physical predicates + failure-mining, local, no infra."
authors = [{ name = "Doeon Kwon" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["spatial", "occupancy", "AV", "autonomous-vehicles", "robotics", "failure-search", "scene-graph", "perception"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    # license is declared via the SPDX `license = "Apache-2.0"` field above (PEP 639);
    # the legacy "License :: OSI Approved" trove classifier is mutually exclusive with it.
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
# CORE: pure numpy/scipy/pyarrow/pyyaml — no torch, no onnxruntime. Installs the `prism` engine.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",  # ndimage: C-space reachable_free_field (predicates/reachable.py)
    "pyyaml>=6.0",
    "pyarrow>=14",  # prism: lossless Scene IR (de)serialization + av2 calibration feathers
]

[project.scripts]
prism = "prism.cli:main"

[project.optional-dependencies]
# OPTIONAL EXTRAS — each is lazy-imported; the core engine works without any of them.
rerun = ["rerun-sdk>=0.20"]          # `prism view`: Rerun visualization adapter (lazy import)
mcap = ["mcap>=1.0"]                 # MCAP log container adapter (lazy import)
detect = ["onnxruntime>=1.16", "pillow>=10.0"]  # `prism find "... missed by the model"`: 2D-detector (YOLOv8n ONNX) model-eval, lazy import
# user-facing optional capabilities together (view + mcap + model-eval find). NOT torch/onnxruntime-in-core.
all = ["rerun-sdk>=0.20", "mcap>=1.0", "onnxruntime>=1.16", "pillow>=10.0"]
# research/build-only, deliberately NOT in [all]:
data = ["nuscenes-devkit>=1.1.11"]   # M2: Occ3D-nuScenes dataset adapter (research substrate)
dev = ["pytest>=8.0"]
mcp = ["mcp>=1.2"]                    # mcp_server/: expose the probe as LLM-callable tools

[tool.setuptools.packages.find]
where = ["src"]
include = ["probe*", "prism*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
