[package]
name = "mdc-wasm"
version = "0.1.0"
edition = "2021"
description = "Surface-nets (dual) meshing of an occupancy grid -> watertight mesh, for mini-PRISM (Rust->WASM)."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
glam = "0.29"

[profile.release]
opt-level = 3
lto = true
